--- a/style.css
+++ b/style.css
@@ -109,6 +109,18 @@ a {
 	font-size: 30px;
 }
 
+.welcomeB {
+	margin-right: 20%;
+	margin-top: 20%;
+	border-style: solid;
+	border-width: 20px;
+	border-radius: 30px;
+	border-color: #3f5f70;
+	background: #3f5f70;
+	margin-bottom: 5%;
+	margin-left: 20%;
+}
+
 .contentDiv {
 	display: flex;
 	margin-left: 10%;
@@ -253,6 +265,34 @@ a {
 	border-color: #d5d9de;
 	background: #d5d9de;
 	margin-bottom: 5%;
+}
+
+.badCaseA {
+	margin-top: 10%;
+	margin-left: 30%;
+	margin-right: 30%;
+	border-style: solid;
+	border-width: 20px;
+	border-radius: 30px;
+	border-color: #d5d9de;
+	background: #d5d9de;
+	margin-bottom: 10%;
+}
+
+.badCaseA h3 {
+	margin-right: 10%;
+	color: #1a1e24;
+	font-size: 30px;
+}
+
+.badCaseA a {
+	margin-right: 10%;
+	color: #1a1e24;
+	font-size: 30px;
+}
+
+.badCaseA p {
+	font-size: 25px;
 }
 
 
